--- a/README.html
+++ b/README.html
@@ -62,6 +62,10 @@
             <article class="content wrap" id="_content" data-uid="">
 
 <p>AlmoastComprehensiveForgeTutorial</p>
+<p>This is some foge tutorial I guess.</p>
+<p>English is not my first language so feel free to fix any mistakes :)</p>
+<p>To contribute make a fork and pull request.
+To see it on your PC run <code>&quot;./docfx/2.52/docfx.exe&quot; docfx.json --serve</code>. Yuo do need to re run to see the changes to the files.</p>
 </article>
           </div>
           
