deploy: 52a93b61bc8b0aa73a6b699f988664fcc7bbce25

--- a/README.html
+++ b/README.html
@@ -62,10 +62,11 @@
             <article class="content wrap" id="_content" data-uid="">
 
 <p>AlmoastComprehensiveForgeTutorial</p>
+<p>(website)[https://dpeter99.github.io/ACFT/]</p>
 <p>This is some foge tutorial I guess.</p>
 <p>English is not my first language so feel free to fix any mistakes :)</p>
 <p>To contribute make a fork and pull request.
-To see it on your PC run <code>&quot;./docfx/2.52/docfx.exe&quot; docfx.json --serve</code>. Yuo do need to re run to see the changes to the files.</p>
+To test it on your PC run <code>&quot;./docfx/2.52/docfx.exe&quot; docfx.json --serve</code> (or the <code>build_andrun.sh</code>). You will need to stop it and re-start it to see any changes to the files.</p>
 </article>
           </div>
           
