--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 <h1 id="almoast-comprehensive-forge-tutorial">Almoast Comprehensive Forge Tutorial</h1>
 
 <p>This is a &quot;tutorial&quot; that is mostly my personal notes for mod developing. They are not guarantied to be complete, good or best practices, just what I have gathered together while making my mod.</p>
+<h2 id="state">State</h2>
+<p>The whole site is considered WIP, nothing is final, nothing is correct.</p>
 </article>
           </div>
           
