deploy: ff4ad6c5f1ffe9970f37812de0f90e56b418f3cd

--- a/README.html
+++ b/README.html
@@ -62,7 +62,7 @@
             <article class="content wrap" id="_content" data-uid="">
 
 <p>AlmostComprehensiveForgeTutorial</p>
-<p>[website][(https://dpeter99.github.io/ACFT/)</p>
+<p><a href="https://dpeter99.github.io/ACFT/">website</a></p>
 <p>This is some forge tutorial I guess.</p>
 <p>English is not my first language so feel free to fix any mistakes :)</p>
 <p>To contribute make a fork and pull request.
