deploy: 9ae95413e1febca6e71567b5ffaa51eea842251a

--- a/notes/toc.html
+++ b/notes/toc.html
@@ -13,10 +13,7 @@
           
           <ul class="nav level1">
                 <li>
-                    <a href="articles/intro.html" name="articles/toc.html" title="Articles">Articles</a>
-                </li>
-                <li>
-                    <a href="notes/forge.html" name="notes/toc.html" title="dpeter's notes">dpeter's notes</a>
+                    <a href="forge.html" name="" title="Forge Update">Forge Update</a>
                 </li>
           </ul>
       </div>
