--- a/toc.html
+++ b/toc.html
@@ -16,7 +16,7 @@
                     <a href="articles/intro.html" name="articles/toc.html" title="Articles">Articles</a>
                 </li>
                 <li>
-                    <a href="notes/forge.html" name="notes/toc.html" title="dpeter's notes">dpeter's notes</a>
+                    <a href="notes/forge_117.html" name="notes/toc.html" title="dpeter's notes">dpeter's notes</a>
                 </li>
           </ul>
       </div>
