deploy: 731f83561c8ff2eb848ad165d12136b27e9d86a5

--- a/notes/forge_117.html
+++ b/notes/forge_117.html
@@ -71,7 +71,8 @@
 <p>For anyone asking for 1.17 forge here is the rundown of the process that goes into updating it.</p>
 <div class="WARNING">
 <h5>Warning</h5>
-<p>Currently step 1 is being worked on. This can take a few days.</p>
+<p>Currently step 1 is being worked on. This can take a few days.
+Currently 338 patches remain from 1011 total</p>
 </div>
 <ul>
 <li>[x] step 0: have vanilla decompiling and compiling again without forge on top. This is needed because the decompiling is not perfect.</li>
