deploy: c1eeac4581fa500a3399a336e26923e12b0a54ae

--- a/notes/forge_117.html
+++ b/notes/forge_117.html
@@ -72,7 +72,7 @@
 <div class="WARNING">
 <h5>Warning</h5>
 <p>Currently step 1 is being worked on. This can take a few days.
-Currently 8 patches remain from 569 total</p>
+Currently almoast all patches are applied, and the resulting compiler errors are being fixed. This is a long process as people have to understand how the new changes from Mojang affect Forge's code</p>
 </div>
 <ul>
 <li>[x] step 0: have vanilla decompiling and compiling again without forge on top. This is needed because the decompiling is not perfect.</li>
