--- a/notes/forge_117.html
+++ b/notes/forge_117.html
@@ -71,12 +71,13 @@
 <p>For anyone asking for 1.17 forge here is the rundown of the process that goes into updating it.</p>
 <div class="WARNING">
 <h5>Warning</h5>
-<p>Currently step 1 is being worked on. This is being done by a few people doing 16h shifts, of non stop work.
-Currently the game compiles but many features are broken (for example: creative menu, joinning servers etc.)</p>
+<p>Currently step 1 is done.
+Currently the team is working on tooling and core component rewrites (to properly support the new Java version).
+This work is being done to make things go easier in the future. This is a fairly complex rewrite so we don't have a time estimate on it</p>
 </div>
 <ul>
 <li>[x] step 0: have vanilla decompiling and compiling again without forge on top. This is needed because the decompiling is not perfect.</li>
-<li>[currently] step 1: have forge compiling, this means that all the code modifications that forge adds still produce a compiling code. This process often requires disabling patches/features temporarily</li>
+<li>[x] step 1: have forge compiling, this means that all the code modifications that forge adds still produce a compiling code. This process often requires disabling patches/features temporarily</li>
 <li>[ ] step 2: once forge compiles and the initial set of patches can be produced, then forge can start to be properly developed, until it's in an usable state enough to actually use. In this phase we make sure that none of the forge extra code parts break the original functionality.</li>
 <li>[ ] step 3: fix all the missing features (that make sense to fix), cleanup, add new hooks, etc. This is the longest part as people have to figure out what mojang did and how to expose it to the modders in a safe way-- this will take some weeks, and result in the recommended build</li>
 </ul>
