--- a/notes/forge_117.html
+++ b/notes/forge_117.html
@@ -69,12 +69,12 @@
             <article class="content wrap" id="_content" data-uid="">
 
 <p>For anyone asking for 1.17 forge here is the rundown of the process that goes into updating it.</p>
-<p><a href="http://localhost:1313/posts/forge_117/">New site</a></p>
+<p><a href="https://dpeter99.github.io/posts/forge_117/">New site</a></p>
 <div class="WARNING">
 <h5>Warning</h5>
 <p>NEW!
 Currently step 2 is done.
-The pathes for forge are ready and a version of forge is running on 1.17. Currently we are waiting on the final touches on the so called Big Peel.</p>
+The patches for forge are ready and a version of forge is running on 1.17. Currently we are waiting on the final touches on the so called Big Peel.</p>
 </div>
 <h2 id="the-big-peel">The Big Peel</h2>
 <p>This refers to a quite large rewiting of how the mods are loaded internally. This doesn't change the &quot;just place the mods inside the <code>mods</code> folder&quot;. And it should not effect players. For the more technical people this means that mods are not Java modules and the mod loader uses modules for loading mods.</p>
